Cleanup time constants and Java 21 update